# rust-dos2unix

./: Cargo.toml  LICENSE  README.md
doc/: search-index.js
doc/dos2unix/: index.html  sidebar-items.js  struct.Dos2Unix.html
doc/src/dos2unix/src/: lib.rs.html
src/: lib.rs
